--- a/Logoipsum/stylelogoipsum.css
+++ b/Logoipsum/stylelogoipsum.css
@@ -43,9 +43,9 @@ header nav ul a{
     width: 211.02px;
     height: 60px;
     border-radius: 10px;
-    background: #FF7143;
+    background: rgba(192, 52, 235, 0.25);
     border: none;
-    color: #FFF;
+    color: #ac1443;
     font-size: 17px;
     font-weight: 700;
     letter-spacing: -0.531px;
