[update]:[file]: stylelogoipsum.css add green color

--- a/Logoipsum/stylelogoipsum.css
+++ b/Logoipsum/stylelogoipsum.css
@@ -43,7 +43,7 @@ header nav ul a{
     width: 211.02px;
     height: 60px;
     border-radius: 10px;
-    background: #FF7143;
+    background: #08fa08;
     border: none;
     color: #FFF;
     font-size: 17px;
