[update]:[file]: stylelogoipsum.css add red h1

--- a/Logoipsum/stylelogoipsum.css
+++ b/Logoipsum/stylelogoipsum.css
@@ -58,7 +58,7 @@ header nav ul a{
     padding-top: 68px;
 }
 .hero div h1{
-    color: #19191B;
+    color: red;
     font-family: "DM Sans", sans-serif;
     font-size: 75px;
     font-weight: 700;
